# rust-raytracing

./: .gitignore  Cargo.toml  readme.md  wasm-build.sh
display/: Cargo.toml
display/src/: main.rs  render.rs
display/src/render/: canvas.rs  image.rs
rt-wasm/: Cargo.toml
rt-wasm/html/: bootstrap.js  index.html  index.js  package-lock.json  package.json
rt-wasm/src/: lib.rs
src/: lib.rs  main.rs  prelude.rs  render.rs  samplers.rs  scenes.rs  surfaces.rs  types.rs  world.rs
src/render/: canvas.rs  image.rs
src/samplers/: internal.rs  jittered.rs  sampler.rs  sampling.rs
src/scenes/: defaults.rs
src/surfaces/: brdf.rs  material.rs
src/types/: brdf.rs  color.rs  material.rs  matrix.rs  normal.rs  objects.rs  point2d.rs  point3d.rs  ray.rs  tracing.rs  utils.rs  vector3d.rs
src/world/: camera.rs  lights.rs  objects.rs  ray.rs  sampler.rs  scene.rs  tracing.rs  viewplane.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
