[package]
name = "rust-raytracing"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.24.5"
num-traits = "0.2.15"
pixel-canvas = "0.2.3"
rand = "0.8.5"
bumpalo = {version = "3.12.0", features = ["boxed", "collections"]}

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3