[package]
name = "rust-raytracing"
version = "0.1.0"
edition = "2021"
authors = ["Alexander Hill"]
repository = "https://github.com/alxhill/rust-raytracing"
license = "MIT"

[workspace]
members = ["display", "rt-wasm"]
default-members = ["display"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
num-traits = "0.2"
rayon = { version = "1.6.1", optional = true}

[features]
parallel = ["rayon"]

[profile.dev]
opt-level = 3